--- a/history.html
+++ b/history.html
@@ -1,8 +1,8 @@
 <html>
-    <header>
+    <head>
         <link rel = "stylesheet" type = "text/css" href = "style.css">
         <title>History</title>
-    </header>
+    </head>
     <body>
         <header>
             <nav>
