--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <body>
         <header>
             <nav>
-                <p><a href = "../sword/index.html">Home</a></p>
-                <p><a href = "../sword/history.html">History</a></p>
-                <p><a href = "../sword/types.html">Types of Swords</a></p>
-                <p><a href = "../sword/making.html">Making a Sword</a></p>
-                <p><a href = "../sword/feedback.html">Feedback</a></p>
+                <p><a href = "sword/index.html">Home</a></p>
+                <p><a href = "sword/history.html">History</a></p>
+                <p><a href = "sword/types.html">Types of Swords</a></p>
+                <p><a href = "sword/making.html">Making a Sword</a></p>
+                <p><a href = "sword/feedback.html">Feedback</a></p>
             </nav>
             <h1>The World of the Sword</h1>
         </header>
