--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <nav>
-                <p><a href = "sword/index.html">Home</a></p>
+                <p><a href = "index.html">Home</a></p>
                 <p><a href = "sword/history.html">History</a></p>
                 <p><a href = "sword/types.html">Types of Swords</a></p>
                 <p><a href = "sword/making.html">Making a Sword</a></p>
