--- a/feedback.html
+++ b/feedback.html
@@ -6,11 +6,11 @@
     <body>
         <header>
             <nav>
-                <p><a href = "sword/index.html">Home</a></p>
-                <p><a href = "sword/history.html">History</a></p>
-                <p><a href = "sword/types.html">Types of Swords</a></p>
-                <p><a href = "sword/making.html">Making a Sword</a></p>
-                <p><a href = "sword/feedback.html">Feedback</a></p>
+                <p><a href = "/index.html">Home</a></p>
+                <p><a href = "/history.html">History</a></p>
+                <p><a href = "/types.html">Types of Swords</a></p>
+                <p><a href = "/making.html">Making a Sword</a></p>
+                <p><a href = "/feedback.html">Feedback</a></p>
             </nav>
             <h1>Feedback</h1>
         </header>
