--- a/history.html
+++ b/history.html
@@ -6,13 +6,23 @@
     <body>
         <header>
             <nav>
-                <p><a href = "index.html">Home</a></p>
-                <p><a href = "sword/history.html">History</a></p>
-                <p><a href = "sword/types.html">Types of Swords</a></p>
-                <p><a href = "sword/making.html">Making a Sword</a></p>
-                <p><a href = "sword/feedback.html">Feedback</a></p>
+                <p><a href = "/index.html">Home</a></p>
+                <p><a href = "/history.html">History</a></p>
+                <p><a href = "/types.html">Types of Swords</a></p>
+                <p><a href = "/making.html">Making a Sword</a></p>
+                <p><a href = "/feedback.html">Feedback</a></p>
             </nav>
             <h1>History of the Sword</h1>
         </header>
+        <main>
+            <h2>From the beginning of civilisation to  modern day</h2>
+            <h3>The first sword</h3>
+            <img src = "images/woodsword.jpg" alt = "Prehistoric wooden sword with stone inserts" />
+            <p class = "forinline">The first swords were wooden with sharp stone inserts, something tribesmen used for hunting and warfare. They were basic tools with almost no cutting edge and functioned almost like clubs. They were made by hammering stones into a wooden stick, which was sometimes cut for better grip. This persisted until metals were discovered</p>
+            <br>
+            <h3>First metal weapons</h3>
+            <img src = "images/bronzesword.png" alt = "Ancient pronze sword" />
+            <p class = "forinline">One cannot discuss swords without discussing metals. </p>
+        </main>
     </body>
 </html>
