--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
     <head>
         <link rel = "stylesheet" type = "text/css" href = "style.css">
         <title>World of Swords</title>
@@ -7,11 +7,11 @@
     <body>
         <header>
             <nav>
-                <p><a href = "sword/index.html">Home</a></p>
-                <p><a href = "sword/history.html">History</a></p>
-                <p><a href = "sword/types.html">Types of Swords</a></p>
-                <p><a href = "sword/making.html">Making a Sword</a></p>
-                <p><a href = "sword/feedback.html">Feedback</a></p>
+                <p><a href = "/index.html">Home</a></p>
+                <p><a href = "/history.html">History</a></p>
+                <p><a href = "/types.html">Types of Swords</a></p>
+                <p><a href = "/making.html">Making a Sword</a></p>
+                <p><a href = "/feedback.html">Feedback</a></p>
             </nav>
             <h1>The World of the Sword</h1>
         </header>
