--- a/history.html
+++ b/history.html
@@ -6,11 +6,11 @@
     <body>
         <header>
             <nav>
-                <p><a href = "/index.html">Home</a></p>
-                <p><a href = "/history.html">History</a></p>
-                <p><a href = "/types.html">Types of Swords</a></p>
-                <p><a href = "/making.html">Making a Sword</a></p>
-                <p><a href = "/feedback.html">Feedback</a></p>
+                <p><a href = "index.html">Home</a></p>
+                <p><a href = "history.html">History</a></p>
+                <p><a href = "types.html">Types of Swords</a></p>
+                <p><a href = "making.html">Making a Sword</a></p>
+                <p><a href = "feedback.html">Feedback</a></p>
             </nav>
             <h1>History of the Sword</h1>
         </header>
@@ -21,8 +21,19 @@
             <p class = "forinline">The first swords were wooden with sharp stone inserts, something tribesmen used for hunting and warfare. They were basic tools with almost no cutting edge and functioned almost like clubs. They were made by hammering stones into a wooden stick, which was sometimes cut for better grip. This persisted until metals were discovered</p>
             <br>
             <h3>First metal weapons</h3>
-            <img src = "images/bronzesword.png" alt = "Ancient pronze sword" />
-            <p class = "forinline">One cannot discuss swords without discussing metals. </p>
+            <img src = "images/bronzesword.png" alt = "Ancient bronze sword" />
+            <p class = "forinline">One cannot discuss swords without discussing metals. The first metals to be discovered were tin and copper. Neither were strong enoiugh to make tools, let alone weapons. Only by combining the two metals was an alloy created that would fulfill the requirements needed for the creation of the first metal sword. These were then used to form the basic kingdoms of the second millenium BC. Until the discovery of iron, this was the most prominent weapon of the times.</p>
+            <br>
+            <h3>Age of Iron</h3>
+            <img src = "images/oldiron.jpg" alt = "ancient iron sword" />
+            <p class = "forinline">In the 12th century BC iron was discovered and slowly propagated the civilisations. The initial difficulty of smelting iron, as well as more manpower needed to create a sword initially made this type of sword a rarity amongst its bronze brothers. However, since iron was much more abundant, these swords were propagating throughout the armies, eventually making it the weapon of choice around 8th century BC.</p>
+            <p class="forinline">It is around this time that swords became an assembly, consisting of the blade and the handle. Evidently people found it hard to grip a metal handle, hence leather cordage or wooden grips were slowly being introduced.</p>
+            <br>
+            <h3>Enter the Romans</h3>
+            <img src = "images/roman.jpg" alt = "roman gladius" />
+            <p>Around the time of the Roman Empire blacksmiths were experimenting with metals and techniques, eventually discovering steel (an alloy of carbon and iron) and quenching (see <a href = "making.html" class = "inlineLink">making</a> for a definition) amongst other things. Grinding the edges of a sword made it sharper, no longer needing a long hammering process to define the edge. Swords were becoming commonplace, each Roman legionaire posessing one. Around this time various shapes were being tested, the Roman gladius being predominant at the time, being shorter and lighter than a regular length sword.</p>
+            <br>
+            <h3></h3>
         </main>
     </body>
 </html>
