--- a/types.html
+++ b/types.html
@@ -6,11 +6,11 @@
     <body>
         <header>
             <nav>
-                <p><a href = "index.html">Home</a></p>
-                <p><a href = "history.html">History</a></p>
-                <p><a href = "types.html">Types of Swords</a></p>
-                <p><a href = "making.html">Making a Sword</a></p>
-                <p><a href = "feedback.html">Feedback</a></p>
+                <p><a href = "./index.html">Home</a></p>
+                <p><a href = "./history.html">History</a></p>
+                <p><a href = "./types.html">Types of Swords</a></p>
+                <p><a href = "./making.html">Making a Sword</a></p>
+                <p><a href = "./feedback.html">Feedback</a></p>
             </nav>
             <h1>Types of Swords</h1>
         </header>
