--- a/feedback.html
+++ b/feedback.html
@@ -14,5 +14,16 @@
             </nav>
             <h1>Feedback</h1>
         </header>
+        <main>
+            <h2>Want to leave feedback? Or spotted a mistake?</h2>
+            <h3>Fill out the form bellow to contact the author!</h3>
+            <br>
+            <p>Name: <textarea></textarea></p>
+            <p>Email: <textarea></textarea></p>
+            <p>What is three plus four? (Proof you are not a robot): <textarea></textarea></p>
+            <p>Comments and suggestions: <textarea></textarea></p>
+            <br>
+            <button>Submit</button>
+        </main>
     </body>
 </html>
