--- a/feedback.html
+++ b/feedback.html
@@ -26,5 +26,8 @@
             <br>
             <button>Submit</button>
         </main>
+        <footer>
+            <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018</p>
+        </footer>
     </body>
 </html>
