--- a/history.html
+++ b/history.html
@@ -56,5 +56,8 @@
             <img src = "images/pistol.jpeg" alt = "pistol sword" />
             <p class = "forinline">As the pistol was invented, swords became more and more obsolete. Of course, it was only during the First World War did people realise that a sword is of no more use. During the Renaissance period, smiths tried to arm the riflemen better, as the musket / rifle could only be shot once ever couple of minutes. They experimented by attaching pistols to swords, sheilds, muskets, just to raise the survivability of soldiers. Of course, as the rifles became more efficient, the necessity of a blade dropped. Today, the only blades we see are wither decorational or come in form of knives and bayonets. The Sword World has finally come to an end, its place in history books and on walls of living rooms, a fitting end to a weapon that shaped the world.</p>
         </main>
+        <footer>
+            <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018</p>
+        </footer>
     </body>
 </html>
