--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
             <p>Ever were interested in the process of making a sword? The blacksmithing, the honing, etc? While <a href = "/making.html" class = "inlineLink">the making</a> page will not delve too deeply into the processes, it will help with the basics and then lead you on to more indepth sources.</p>
             <p>Of course and and all <a href = "feedback.html" class = "inlineLink">feedback</a> on this site is greatly appreciated!</p>
         </main>
+        <footer>
+            <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018</p>
+        </footer>
     </body>
 </html>
