--- a/making.html
+++ b/making.html
@@ -3,6 +3,8 @@
     <head>
         <link rel = "stylesheet" type = "text/css" href = "style.css">
         <title>Making</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+        <link rel = "icon" href = "images/favicon.png">
     </head>
     <body>
         <header>
@@ -51,6 +53,8 @@
         </main>
         <footer>
             <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018</p>
+            <a href = "https://www.facebook.com/markthebob"><i class="fab fa-facebook-square"></i></a>
+            <a href = "https://www.twitch.tv/markthebob"><i class="fab fa-twitch"></i></a>
         </footer>
     </body>
 </html>
