--- a/feedback.html
+++ b/feedback.html
@@ -16,22 +16,21 @@
                 <p><a href = "./feedback.html">Feedback</a></p>
             </nav>
             <h1>Feedback</h1>
-        </header>
-        <main>
             <h2>Want to leave feedback? Or spotted a mistake?</h2>
+        </header>
+        <main class = "from">
             <h3>Fill out the form bellow to contact the author!</h3>
             <br>
-            <p>Name: <textarea></textarea></p>
-            <p>Email: <textarea></textarea></p>
-            <p>What is three plus four? (Proof you are not a robot): <textarea></textarea></p>
-            <p>Comments and suggestions: <textarea></textarea></p>
+            <p>Name: <textarea aria-label = "name"></textarea></p>
+            <p>Email: <textarea aria-label = "email"></textarea></p>
+            <p>What is three plus four? (Proof you are not a robot): <textarea aria-label = "captcha"></textarea></p>
+            <p>Comments and suggestions: <textarea id = "comments" aria-label="comment"></textarea></p>
             <br>
             <button>Submit</button>
         </main>
         <footer>
-            <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018</p>
-            <a href = "https://www.facebook.com/markthebob"><i class="fab fa-facebook-square"></i></a>
-            <a href = "https://www.twitch.tv/markthebob"><i class="fab fa-twitch"></i></a>
+                <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018 <a href = "https://www.facebook.com/markthebob" target="_blank" aria-label = "facebook link"><i class="fab fa-facebook-square"></i></a>
+                <a href = "https://www.twitch.tv/markthebob" target="_blank" aria-label = "twitch link"><i class="fab fa-twitch"></i></a></p>
         </footer>
     </body>
 </html>
