--- a/history.html
+++ b/history.html
@@ -16,15 +16,16 @@
                 <p><a href = "./feedback.html">Feedback</a></p>
             </nav>
             <h1>History of the Sword</h1>
+            <h2>From the beginning of civilisation to  modern day</h2>
         </header>
         <main>
-            <h2>From the beginning of civilisation to  modern day</h2>
             <div class = "hist">
                 <h3>The first sword</h3>
                 <img src = "images/woodsword.jpg" alt = "Prehistoric wooden sword with stone inserts" />
                 <p class = "forinline">The first swords were wooden with sharp stone inserts, something tribesmen used for hunting and warfare. They were basic tools with almost no cutting edge and functioned almost like clubs. They were made by hammering stones into a wooden stick, which was sometimes cut for better grip. This persisted until metals were discovered</p>
             </div>
-            <h3>First metal weapons</h3>
+            <div class = "hist">
+                <h3>First metal weapons</h3>
                 <img src = "images/bronzesword.png" alt = "Ancient bronze sword" />
                 <p class = "forinline">One cannot discuss swords without discussing metals. The first metals to be discovered were tin and copper. Neither were strong enoiugh to make tools, let alone weapons. Only by combining the two metals was an alloy created that would fulfill the requirements needed for the creation of the first metal sword. These were then used to form the basic kingdoms of the second millenium BC. Until the discovery of iron, this was the most prominent weapon of the times.</p>
             </div>
@@ -67,9 +68,8 @@
             </div>
         </main>
         <footer>
-            <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018</p>
-            <a href = "https://www.facebook.com/markthebob"><i class="fab fa-facebook-square"></i></a>
-            <a href = "https://www.twitch.tv/markthebob"><i class="fab fa-twitch"></i></a>
+                <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018 <a href = "https://www.facebook.com/markthebob" target="_blank" aria-label = "facebook link"><i class="fab fa-facebook-square"></i></a>
+                <a href = "https://www.twitch.tv/markthebob" target="_blank" aria-label = "twitch link"><i class="fab fa-twitch"></i></a></p>
         </footer>
     </body>
 </html>
