--- a/history.html
+++ b/history.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel = "stylesheet" type = "text/css" href = "html5reset-1.6.1.css">
         <link rel = "stylesheet" type = "text/css" href = "style.css">
         <title>History</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <link rel = "icon" href = "images/favicon.png">
+        <script src = "scripts/jq.js"></script>
+        <script src="scripts/fontplay.js"></script>
+        <script src = "scripts/hist.js" ></script>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
     </head>
     <body>
         <header>
             <nav>
                 <p><a href = "./index.html">Home</a></p>
-                <p><a href = "./history.html">History</a></p>
+                <p><a href = "./history.html" id = "c">History</a></p>
                 <p><a href = "./types.html">Types of Swords</a></p>
                 <p><a href = "./making.html">Making a Sword</a></p>
                 <p><a href = "./feedback.html">Feedback</a></p>
             </nav>
             <h1>History of the Sword</h1>
             <h2>From the beginning of civilisation to  modern day</h2>
+            <h3 id = "printer">WHY ARE YOU PRINTING THIS???</h3>
         </header>
         <main>
             <div class = "hist">
                 <h3>The first sword</h3>
                 <img src = "images/woodsword.jpg" alt = "Prehistoric wooden sword with stone inserts" />
-                <p>The first swords were wooden with sharp stone inserts, something tribesmen used for hunting and warfare. They were basic tools with almost no cutting edge and functioned almost like clubs. They were made by hammering stones into a wooden stick, which was sometimes cut for better grip. This persisted until metals were discovered</p>
+                <p id = "test">The first swords were wooden with sharp stone inserts, something tribesmen used for hunting and warfare. They were basic tools with almost no cutting edge and functioned almost like clubs. They were made by hammering stones into a wooden stick, which was sometimes cut for better grip. This persisted until metals were discovered</p>
             </div>
             <div class = "hist">
                 <h3>First metal weapons</h3>
@@ -70,6 +76,15 @@
         <footer>
                 <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018 <a href = "https://www.facebook.com/markthebob" target="_blank" aria-label = "facebook link"><i class="fab fa-facebook-square"></i></a>
                 <a href = "https://www.twitch.tv/markthebob" target="_blank" aria-label = "twitch link"><i class="fab fa-twitch"></i></a></p>
+                <p>Choose a font below, style the page yourself! (Affects: This page only)</p>
+                <ul>
+                    <li id = "creepy">Creepy Font</li>
+                    <li id = "hand">Handwriting Font</li>
+                    <li id = "normal">Normal Font</li>
+                    <li id = "nostalgia">Nostalgic Font</li>
+                    <li id = "no">Bland Font</li>
+                    <li id = "why">Surprise Font</li>
+                </ul>
         </footer>
     </body>
 </html>
