--- a/making.html
+++ b/making.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel = "stylesheet" type = "text/css" href = "html5reset-1.6.1.css">
         <link rel = "stylesheet" type = "text/css" href = "style.css">
         <title>Making</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <link rel = "icon" href = "images/favicon.png">
+        <script src = "scripts/jq.js"></script>
+        <script src="scripts/fontplay.js"></script>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
     </head>
     <body>
         <header>
@@ -12,11 +16,12 @@
                 <p><a href = "./index.html">Home</a></p>
                 <p><a href = "./history.html">History</a></p>
                 <p><a href = "./types.html">Types of Swords</a></p>
-                <p><a href = "./making.html">Making a Sword</a></p>
+                <p><a href = "./making.html" id = "c">Making a Sword</a></p>
                 <p><a href = "./feedback.html">Feedback</a></p>
             </nav>
             <h1>The Making of the Sword</h1>
             <h2>The art of sword forging</h2>
+            <h3 id = "printer">WHY ARE YOU PRINTING THIS???</h3>
         </header>
         <main>
             <div class = "mak">
@@ -61,6 +66,15 @@
         <footer>
                 <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018 <a href = "https://www.facebook.com/markthebob" target="_blank" aria-label = "facebook link"><i class="fab fa-facebook-square"></i></a>
                 <a href = "https://www.twitch.tv/markthebob" target="_blank" aria-label = "twitch link"><i class="fab fa-twitch"></i></a></p>
+                <p>Choose a font below, style the page yourself! (Affects: This page only)</p>
+                <ul>
+                    <li id = "creepy">Creepy Font</li>
+                    <li id = "hand">Handwriting Font</li>
+                    <li id = "normal">Normal Font</li>
+                    <li id = "nostalgia">Nostalgic Font</li>
+                    <li id = "no">Bland Font</li>
+                    <li id = "why">Surprise Font</li>
+                </ul>
         </footer>
     </body>
 </html>
