--- a/history.html
+++ b/history.html
@@ -44,10 +44,10 @@
                     <div>
                         <div data-u="image" class = "hist">
                             <h3>First metal weapons</h3>
-                            <img src = "images/bronzesword.png" alt = "Ancient bronze sword" />
+                            <img src = "images/bronzesword.png" alt = "ancient bronze sword" />
                             <p>One cannot discuss swords without discussing metals. The first metals to be discovered were tin and copper. Neither were strong enoiugh to make tools, let alone weapons. Only by combining the two metals was an alloy created that would fulfill the requirements needed for the creation of the first metal sword. These were then used to form the basic kingdoms of the second millenium BC. Until the discovery of iron, this was the most prominent weapon of the times.</p>
                         </div>
-                        <img data-u="thumb" src="images/bronzesword.png" alt = "" />
+                        <img data-u="thumb" src="images/bronzesword.png" alt = "ancient bronze sword" />
                     </div>
                     <div>
                         <div data-u="image" class = "hist">
@@ -141,7 +141,7 @@
                 <div class = "hist">
                     <h3>The first sword</h3>
                     <img src = "images/woodsword.jpg" alt = "Prehistoric wooden sword with stone inserts" />
-                    <p id = "test">The first swords were wooden with sharp stone inserts, something tribesmen used for hunting and warfare. They were basic tools with almost no cutting edge and functioned almost like clubs. They were made by hammering stones into a wooden stick, which was sometimes cut for better grip. This persisted until metals were discovered</p>
+                    <p>The first swords were wooden with sharp stone inserts, something tribesmen used for hunting and warfare. They were basic tools with almost no cutting edge and functioned almost like clubs. They were made by hammering stones into a wooden stick, which was sometimes cut for better grip. This persisted until metals were discovered</p>
                 </div>
                 <div class = "hist">
                     <h3>First metal weapons</h3>
