--- a/history.html
+++ b/history.html
@@ -37,7 +37,7 @@
                         <div data-u="image" class = "hist">
                             <h3>The first sword</h3>
                             <img src = "images/woodsword.jpg" alt = "Prehistoric wooden sword with stone inserts" />
-                            <p id = "test">The first swords were wooden with sharp stone inserts, something tribesmen used for hunting and warfare. They were basic tools with almost no cutting edge and functioned almost like clubs. They were made by hammering stones into a wooden stick, which was sometimes cut for better grip. This persisted until metals were discovered</p>
+                            <p>The first swords were wooden with sharp stone inserts, something tribesmen used for hunting and warfare. They were basic tools with almost no cutting edge and functioned almost like clubs. They were made by hammering stones into a wooden stick, which was sometimes cut for better grip. This persisted until metals were discovered</p>
                         </div>
                         <img data-u="thumb" src="images/woodsword.jpg" alt = "Prehistoric wooden sword with stone inserts" />
                     </div>
