--- a/history.html
+++ b/history.html
@@ -30,7 +30,7 @@
             <div id="jssor_1">
                 <!-- Loading Screen -->
                 <div data-u="loading" class="jssorl-009-spin">
-                    <img id = "moo" src="images/making/spin.svg" />
+                    <img id = "moo" src="images/making/spin.svg" alt = "loading..."/>
                 </div>
                 <div data-u="slides" id = "baa">
                     <div>
