--- a/feedback.html
+++ b/feedback.html
@@ -29,7 +29,7 @@
             <form action="https://formspree.io/bobrovm@umich.edu" method="POST">
                 <label>Name: <input name = "name" type="text" id = "nm" required autocomplete="off"></label><br>
                 <label>Email: <input name = "email" type="email" id = "em" required autocomplete="off"></label><br>
-                <label>Comments and suggestions: <br><textarea id = "com" name="comment" type="text" required></textarea></label><br>
+                <label>Comments and suggestions: <br><textarea id = "com" name="comment" required></textarea></label><br>
                 <input type="submit" id = "butt" value = "Click to Submit">
             </form>
         </main>
