--- a/history.html
+++ b/history.html
@@ -9,8 +9,8 @@
         <link rel = "icon" href = "images/favicon.png">
         <script src = "scripts/jq.js"></script>
         <script src="scripts/fontplay.js"></script>
-        <script src = "scripts/jssor.slider-27.5.0.min.js" type="text/javascript"></script>
-        <script src = "scripts/making.js" type="text/javascript"></script>
+        <script src = "scripts/jssor.slider-27.5.0.min.js"></script>
+        <script src = "scripts/making.js"></script>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
     </head>
     <body>
