--- a/making.html
+++ b/making.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <link rel = "icon" href = "images/favicon.png">
         <script src = "scripts/jq.js"></script>
-        <script src="scripts/fontplay.js" type="text/javascript"></script>
-        <script src = "scripts/jssor.slider-27.5.0.min.js" type="text/javascript"></script>
-        <script src = "scripts/making.js" type="text/javascript"></script>
+        <script src="scripts/fontplay.js"></script>
+        <script src = "scripts/jssor.slider-27.5.0.min.js"></script>
+        <script src = "scripts/making.js"></script>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
     </head>
     <body>
@@ -30,7 +30,7 @@
             <div id="jssor_1">
                 <!-- Loading Screen -->
                 <div data-u="loading" class="jssorl-009-spin">
-                    <img id = "moo" src="images/making/spin.svg" />
+                    <img id = "moo" src="images/making/spin.svg" alt = "loading..."/>
                 </div>
                 <div data-u="slides" id = "baa">
                     <div>
@@ -81,7 +81,7 @@
                             <h3>Finishing up</h3>
                             <img src = "images/making/final.jpg" alt = "finished sword" />
                             <p>All that remains is to put the handle on the sword, add some decorations like the pommel and guard, maybe even adding some gold carvings into the blade. Be creative!<br><br>
-                            <moo>Ta-Da! You now have made a sword!</moo></p>
+                            <b>Ta-Da! You now have made a sword!</b></p>
                         </div>
                         <img data-u="thumb" src="images/making/finalmin.jpg" alt = "finished sword" />
                     </div>
@@ -129,26 +129,26 @@
                 </div>
                 <div class = "mak">
                     <h3>Rough grinding</h3>
-                    <img src = "images/making/grind1.jpg" alt = "rough grinding" id  ="odd1"/>
+                    <img src = "images/making/grind1.jpg" alt = "rough grinding"/>
                     <p>Once the blade has cooled down, proceed to grind the blade. Remove all black flakes that remain from forging, but do not start to polish the blade. The edges need to be roughly ground to shape, but no true edge must be put in. Remember to allow the blade to cool during grinding.
                     <br><br>A grinding wheel is obviously the fastest method to grind the blade into shape, but if pursuing the true methods used in the past, files can be used instead.</p>
                 </div>
                 <div class = "mak">
                     <h3>Quenching</h3>
-                    <img src = "images/making/quenching.jpg" id = "odd2" alt = "quenching a blade" />
+                    <img src = "images/making/quenching.jpg" alt = "quenching a blade" />
                     <p>This is the most important part of the process. You have hammered away at the blade, distrupting the microstructures and molecular lattices inside the metal, so now is the time to organise them and set them into shape. Heat the blade to a red / orange / yellow colour and quickly dip it into oil or water. The colour and the quenching medium depend on the material used, as well as the desired characteristics of the sword. Be aware that the blade may warp during the sudden cooling, so you will only have several second to fix the bending! Do not reheat the blade, as it will ruin the quenching process.<br><br>
                     A secondary quenching can be performed on some blades by heating an oil bath and immersing the blade for several hours. However, a repeated quenching by heating the blade to red colour and then using water to cool it rapidly will render the blade useless.</p>
                 </div>
                 <div class = "mak">
                     <h3>Truing and polishing</h3>
-                    <img src = "images/making/grind2.JPG" id = "odd3" alt = "final grinding" />
+                    <img src = "images/making/grind2.JPG" alt = "final grinding" />
                     <p>Now the easy part. The blade needs to be ground into final shape, the edges need to be refined and sharpened, and the whole sword needs to be polished. This process aims to refine the shape of the sword, not take away large quantities of material. For this reason the earlier grinding process is important, as taking too much material away will ruin the lattice structure of the metal. Use progressive grits to smooth all surfaces, finally getting a magnificent looking blade. If you have used different steels in the process, or would like to bring out the Damascus pattern, then dip the blade into etching acid for several minutes. This will bring out the difference between the layers.</p>
                 </div>
                 <div class = "mak">
                     <h3>Finishing up</h3>
                     <img src = "images/making/final.jpg" alt = "finished sword" />
                     <p>All that remains is to put the handle on the sword, add some decorations like the pommel and guard, maybe even adding some gold carvings into the blade. Be creative!<br><br>
-                    <moo>Ta-Da! You now have made a sword!</moo></p>
+                    <b>Ta-Da! You now have made a sword!</b></p>
                 </div>
             </div>
         </main>
