--- a/extras/examples/index.html
+++ b/extras/examples/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <section>
-    <h3>A Four Image Set</h3>
+    <h3>A Image Image Set</h3>
     <div>
       <a class="example-image-link" href="../images/1.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="../images/1.jpg" alt="img1"/></a>
       <a class="example-image-link" href="../images/2.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="../images/2.jpg" alt="img1"/></a>
